grammar/src/lexer/snapshots/grammar__lexer__build__tests__line_comment.snap
---
source: grammar/src/lexer/build.rs
expression: "(char_intervals.iter().enumerate().collect::<Vec<_>>(), nfa, dfa)"
---
(
    [
        (
            0,
            0,
        ),
        (
            1,
            10,
        ),
        (
            2,
            11,
        ),
        (
            3,
            35,
        ),
        (
            4,
            36,
        ),
    ],
    Nfa {
        transitions: {
            (
                State(0),
                Some(
                    3,
                ),
            ): {
                State(1),
            },
            (
                State(1),
                None,
            ): {
                State(2),
            },
            (
                State(2),
                Some(
                    0,
                ),
            ): {
                State(3),
            },
            (
                State(2),
                Some(
                    4,
                ),
            ): {
                State(3),
            },
            (
                State(2),
                Some(
                    2,
                ),
            ): {
                State(3),
            },
            (
                State(2),
                Some(
                    3,
                ),
            ): {
                State(3),
            },
            (
                State(3),
                None,
            ): {
                State(2),
            },
        },
        alphabets: {
            State(0): {
                3,
            },
            State(2): {
                0,
                4,
                2,
                3,
            },
        },
        accept_states: {
            State(2): (
                18446744073709551599,
                TokenId(
                    0,
                ),
            ),
        },
    },
    Dfa {
        start: 0,
        transitions: {
            (
                State(0),
                3,
            ): State(1),
            (
                State(1),
                0,
            ): State(2),
            (
                State(1),
                4,
            ): State(2),
            (
                State(1),
                2,
            ): State(2),
            (
                State(1),
                3,
            ): State(2),
            (
                State(2),
                0,
            ): State(2),
            (
                State(2),
                4,
            ): State(2),
            (
                State(2),
                2,
            ): State(2),
            (
                State(2),
                3,
            ): State(2),
        },
        accept_states: {
            State(1): TokenId(
                0,
            ),
            State(2): TokenId(
                0,
            ),
        },
    },
)
