grammar/src/lexer/snapshots/grammar__lexer__build__tests__regex_repetition.snap
---
source: grammar/src/lexer/build.rs
expression: "(char_intervals.iter().enumerate().collect::<Vec<_>>(), nfa, dfa)"
---
(
    [
        (
            0,
            0,
        ),
        (
            1,
            46,
        ),
        (
            2,
            47,
        ),
        (
            3,
            48,
        ),
        (
            4,
            58,
        ),
    ],
    Nfa {
        transitions: {
            (
                State(0),
                None,
            ): {
                State(1),
            },
            (
                State(1),
                Some(
                    3,
                ),
            ): {
                State(2),
            },
            (
                State(2),
                None,
            ): {
                State(1),
                State(4),
            },
            (
                State(2),
                Some(
                    1,
                ),
            ): {
                State(3),
            },
            (
                State(3),
                None,
            ): {
                State(4),
            },
            (
                State(4),
                Some(
                    3,
                ),
            ): {
                State(5),
            },
            (
                State(5),
                None,
            ): {
                State(4),
            },
        },
        state_letters: {
            State(1): {
                3,
            },
            State(2): {
                1,
            },
            State(4): {
                3,
            },
        },
        accept_states: {
            State(4): (
                18446744073709551603,
                TokenId(
                    0,
                ),
            ),
        },
    },
    Dfa {
        start: 0,
        transitions: {
            (
                State(0),
                3,
            ): State(1),
            (
                State(1),
                3,
            ): State(2),
            (
                State(1),
                1,
            ): State(3),
            (
                State(2),
                3,
            ): State(2),
            (
                State(2),
                1,
            ): State(3),
            (
                State(3),
                3,
            ): State(4),
            (
                State(4),
                3,
            ): State(4),
        },
        accept_states: {
            State(1): TokenId(
                0,
            ),
            State(2): TokenId(
                0,
            ),
            State(3): TokenId(
                0,
            ),
            State(4): TokenId(
                0,
            ),
        },
    },
)
